# test-task-led

./: .gitignore  CMakeLists.txt  README.md  install.sh
client/: CMakeLists.txt  main.cpp
tcp_server/: CMakeLists.txt  main.cpp
tcp_server/common/: deserializer.cpp  deserializer.h  led.cpp  led.h  requestprocessor.cpp  requestprocessor.h  session.cpp  session.cpp.autosave  session.h  tcpserver.cpp  tcpserver.h
tcp_server/requests/: getledcolorrequest.cpp  getledcolorrequest.h  getledraterequest.cpp  getledraterequest.h  getledstaterequest.cpp  getledstaterequest.h  request.h  setledcolorrequest.cpp  setledcolorrequest.h  setledraterequest.cpp  setledraterequest.h  setledstaterequest.cpp  setledstaterequest.h
tcp_server/responses/: errorresponse.cpp  errorresponse.h  getledcolorresponse.cpp  getledcolorresponse.h  getledrateresponse.cpp  getledrateresponse.h  getledstateresponse.cpp  getledstateresponse.h  response.cpp  response.h  response.h.autosave  setledcolorresponse.cpp  setledcolorresponse.h  setterresponse.cpp  setterresponse.h
